--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "out/index.js",
   "scripts": {
     "vscode:prepublish": "node ./node_modules/vscode/bin/compile",
-    "test": "mocha",
-    "compile": "node ./node_modules/vscode/bin/compile -watch -p ./"
+    "compile": "node ./node_modules/vscode/bin/compile -watch -p ./",
+    "pretest": "tsc",
+    "test": "mocha ./out"
   },
   "author": "",
   "license": "ISC",
