add main binary

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Testing typescript",
   "main": "out/index.js",
   "scripts": {
-    "vscode:prepublish": "node ./node_modules/vscode/bin/compile",
     "compile": "node ./node_modules/vscode/bin/compile -watch -p ./",
+    "prestart": "tsc",
+    "start": "node out/index.js",
     "pretest": "tsc",
     "test": "mocha ./out/test"
   },
